manifests/deployment.authn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authn
  labels:
    app: alltrails
    function: authn
spec:
  replicas: 1
  selector:
    matchLabels:
      function: authn
  template:
    metadata:
      labels:
        function: authn
    spec:
      containers:
      - name: authn
        resources:
          limits:
            cpu: "500m"
            memory: "200Mi"
          requests:
            cpu: "250m"
            memory: "100Mi"
        image: alpine
        command:
        - '/bin/sh'
        args: 
        - '-c'
        - 'apk add netcat-openbsd stress-ng && echo starting server && while true; do echo -e "HTTP/1.1 200 OK\n\n Authentication Server"|nc -l -q 0 -p 3000; done'
        ports:
        - containerPort: 3000
