manifests/deployment.nav.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nav
  labels:
    app: alltrails
    function: nav
spec:
  selector:
    matchLabels:
      function: nav
  template:
    metadata:
      labels:
        function: nav
    spec:
      containers:
      - name: nav
        resources:
          limits:
            cpu: "500m"
            memory: "200Mi"
          requests:
            cpu: "250m"
            memory: "100Mi"
        image: alpine
        command:
        - '/bin/sh'
        args:
        - '-c'
        - 'apk add netcat-openbsd stress-ng && echo starting server && while true; do echo -e "HTTP/1.1 200 OK\n\n Nav Server $(stress-ng --matrix 1 --timeout 1)"|nc -l -q 0 -p 3500; done'
