manifests/np.nginx.yaml
# Note: If applied without a CNI that supports NetworkPolicies this will do nothing. Docker for desktop's CNI does not support NetworkPolicies. NetworkPolicies allow strict limitations to be placed on traffic within the kubernetes network. This can hinder discovery and lateral movement by attackers.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-from-nginx
spec:
  podSelector:
    matchLabels:
      app: alltrails
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ingress: "true"
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
